--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,8 @@ body {
     --foreground: 0 0% 15%; /* #272727 */
     --card: 48 10% 12%;
     --card-foreground: 0 0% 15%;
-    --popover: 48 10% 12%;
-    --popover-foreground: 0 0% 15%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
     --primary: 48 93% 54%; /* #F9CC16 */
     --primary-foreground:  0 0% 100%; /* #D2A800 */
     --secondary: 0 0% 100%; /* #FFFFFF */
@@ -27,7 +27,7 @@ body {
     --border: 0 0% 30%;
     --input: 0 0% 30%;
     --ring: 48 93% 54%;
-    --radius: 0.5rem;
+    --radius: .7rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -40,8 +40,8 @@ body {
     --foreground: 0 0% 15%; /* #272727 */
     --card: 48 10% 12%;
     --card-foreground: 0 0% 15%;
-    --popover: 48 10% 12%;
-    --popover-foreground: 0 0% 15%;
+    --popover: 20 14.3% 4.1%;
+    --popover-foreground: 60 9.1% 97.8%;
     --primary: 48 93% 54%; /* #F9CC16 */
     --primary-foreground:  0 0% 100%; /* #D2A800 */
     --secondary: 0 0% 100%; /* #FFFFFF */
