--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
     --primary: 48 93% 54%; /* #F9CC16 */
-    --primary-foreground:  0 0% 100%; /* #D2A800 */
+    --primary-foreground: 0 0% 100%; /* #D2A800 */
     --secondary: 0 0% 100%; /* #FFFFFF */
     --secondary-foreground: 0 0% 74.5%; /* #BEBEBE */
     --muted: 0 0% 100%;
@@ -27,7 +27,7 @@ body {
     --border: 0 0% 30%;
     --input: 0 0% 30%;
     --ring: 48 93% 54%;
-    --radius: .7rem;
+    --radius: 0.7rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -43,7 +43,7 @@ body {
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
     --primary: 48 93% 54%; /* #F9CC16 */
-    --primary-foreground:  0 0% 100%; /* #D2A800 */
+    --primary-foreground: 0 0% 100%; /* #D2A800 */
     --secondary: 0 0% 100%; /* #FFFFFF */
     --secondary-foreground: 0 0% 15%; /* #BEBEBE */
     --muted: 0 0% 100%;
@@ -66,6 +66,7 @@ body {
 @layer base {
   * {
     @apply border-border;
+    /* outline: #f9cc16 !important; */
   }
   body {
     @apply bg-background text-foreground;
@@ -91,7 +92,6 @@ body {
     linear-gradient(to bottom, #4b4a4b52, transparent 1px);
 }
 
-
 @keyframes backgroundP {
   0% {
     background-position: 0rem;
@@ -110,7 +110,7 @@ body {
     transform: translateY(-20px) scale(1.5);
   }
 }
-.animate-float{
+.animate-float {
   animation: float 10s infinite ease-in-out;
 }
 
@@ -209,12 +209,12 @@ body {
   }
 }
 
-*::selection{
-  background-color:#F9CC16 ;
-  color: #1E1E1E;
+*::selection {
+  background-color: #f9cc16;
+  color: #1e1e1e;
 }
 
-.errInput{
+.errInput {
   border: 1px solid red !important;
   outline: 0px transparent;
 }
